@@ -1,3 +1,2 @@
-#! /usr/bin/python
 
 version = "0.7.5+"
